*granite-5.2.4 (13 Aug 2019)

  13 Aug 2019;  <bemeurer@gentoo.org> +granite-5.2.4.ebuild, +metadata.xml:
  dev-libs/granite: bump 5.2.4