@@ -1,4 +1,4 @@
 DIST granite-5.2.4.tar.gz 390145 BLAKE2B 30abee1669bf2211aa776a5ddf38b914bc95e466f2853f4e852b77947b666c06ce8ac77a47b22bce0cdbf8e6804935007b5cef700c49db302528b7bbb0063543 SHA512 3a52a92a49f887bb802754b99b7c9c3fd13c197c74da7c25f1fd4c03b76d916197079b813909d2cceb11cb10b26e9f64978563b95319d0c744c5b612c50ce306
-EBUILD granite-5.2.4.ebuild 953 BLAKE2B ef9fea0a50d572e0c3ee73fb6ff9f617e23b28716a9c410913cb3bab409f3d7d041c7bb6da4454074c5edc701d40248fa53b9850f6573cfd6bec97930bfcee6c SHA512 cddc00a7db080ad2f7f4198cff7e2cd45c2a6b3b580fbda72514d48eebdf693cb11a860b1eb51333a3149f9eb143c9b2a21df6328e03041c7aa94f4d95cb785c
-MISC ChangeLog 137 BLAKE2B 7352489a861dfdf5eb2bad9c1b81b4ec003f09c246148d529b63fc121eecfec25cdf194481c3b3ce5dc9c96ca51d9ccad8b22302e7245c492441ab2b40f0473a SHA512 4405a430cdfeced425cd1489e51fd4481ca154f82bbdf6c1629f12e5193897eb2cdf67b0174b61fea3a66d1866f69964f36ae0b704d61b16d61ed3735a3aa9cd
+EBUILD granite-5.2.4.ebuild 903 BLAKE2B b026b1b65ee643211699062d298fdff86c6b22c124720733254658f5eea44f8dcfeb8e1ce035f7e84c456a52a7e4a7fc2f66ef1aa02710f73d9ffe9d11a80bfe SHA512 573d67e41f766dd8d0c6863e0bf5680a563950f551fbb43e03156ad37548573542a9a60061c10832d01ecf495299224c82184c8a09a45aa0601a973507c52c24
+MISC ChangeLog 244 BLAKE2B 8ab2691276ae8c38b81d294872252b2c0daa65f3251c56405f8127b425051f431ff08ab6a27e55e8c2f5690913133e23c6a9078a36040753ae2fa586a1a5c0d9 SHA512 24ac934408078834fcb4fc24d4f3693fe9e8d2a684285baa732e03fbb6bf6c0878e76d3bd97571a62d303cf2c3ba511ca35ddd858340353b19f7f7952a682318
 MISC metadata.xml 563 BLAKE2B 1bfeeb790fbacf5024fcc6b0492dc88905ac469bf326262d5b1fa53336122d39c735100285341b92a9190b1625f1b747237b80a0800798d0b0a3fe85af1175c1 SHA512 4fcca87a2fa2597187539812749ab74e5391cc7330899251e96611737cee83df7522f83d10c9aef7da41decbd2538ab50f07dd497783fe1db0a17464cadb89a8
