@@ -1,3 +1,6 @@
+  13 Aug 2019;  <bemeurer@gentoo.org> granite-5.2.4.ebuild:
+  dev-libs/granite: gnome2-utils -> xdg-utils
+
 *granite-5.2.4 (13 Aug 2019)
 
   13 Aug 2019;  <bemeurer@gentoo.org> +granite-5.2.4.ebuild, +metadata.xml:
